<resources>
    <string name="app_name">Contactos</string>
    <string name="anadir">+</string>
    <string name="buscar">Buscar</string>

    <string name="nombre">Nombre</string>
    <string name="apodo">Apodo</string>
    <string name="empresa">Empresa</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="notas">Notas</string>
    <string name="anadirContacto">Guardar</string>
    <string name="editar">Editar</string>
    <string name="todo">TODO</string>
    <string name="eliminar_contcto">Eliminar contacto</string>

</resources>
