<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anadir">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/linear_anadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                >

                <ImageView
                    android:id="@+id/imageViewimg"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/usuario_nulo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonAbrirGaleria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Añadir foto" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Borrar foto" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextApodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apodo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/empresa"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_telefono_repeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="8dp">


                <Spinner
                    android:id="@+id/spinnerTipo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />

                <EditText
                    android:id="@+id/editTextTelefono"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/buttonAddTelefono"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_input_add" />
            </LinearLayout>

            <com.example.contactos.NonScrollListView
                android:id="@+id/list_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp">

            </com.example.contactos.NonScrollListView>

            <LinearLayout
                android:id="@+id/linear_email_repeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/editTextCorreo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/buttonAddEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_input_add" />
            </LinearLayout>

            <com.example.contactos.NonScrollListView
                android:id="@+id/list_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"/>

            <LinearLayout
                android:id="@+id/linear_notas_repeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginRight="8dp">

                <EditText
                    android:id="@+id/editTextNotas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:ems="10"
                    android:hint="@string/notas"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/buttonAddNotas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_input_add" />
            </LinearLayout>

            <com.example.contactos.NonScrollListView
                android:id="@+id/list_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp">

            </com.example.contactos.NonScrollListView>

            <include layout="@layout/diseno_direccion" />

            <Button
                android:id="@+id/buttonAnadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@null"
                android:text="@string/anadirContacto"
                android:gravity="left|center_vertical"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>