<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anadir">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/linear_anadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:text="Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewimg2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/usuario_nulo" />


            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/buttonLlamar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle"
                    android:drawableLeft="@drawable/ic_phone_in_talk_black_24dp"
                    android:gravity="center"
                    android:scaleType="fitXY" />


                <Button
                    android:id="@+id/buttonMandarCorreo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:scaleType="fitXY" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/editTextNombre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/editTextApodo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apodo"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/editTextEmpresa2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/empresa"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_marginRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Telefonos:"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.example.contactos.NonScrollListView
                        android:id="@+id/list_telefono2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp">

                    </com.example.contactos.NonScrollListView>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <com.example.contactos.NonScrollListView
                        android:id="@+id/list_correo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Notas:"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <com.example.contactos.NonScrollListView
                        android:id="@+id/list_notas2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp">

                    </com.example.contactos.NonScrollListView>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <include layout="@layout/diseno_direccion_ver" />

            <Button
                android:id="@+id/buttonEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:text="Eliminar contcto"
                android:gravity="left|center_vertical"
                android:textColor="#ff0000"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>